# flattensObjectsNeatly

./: CMakeLists.txt  MockVisitor.h  build.sh  busy.yaml  cpm.dependencies  main.cpp  traits.h
fon/: Visitor.h  adapter.h  proxy.h  traits.h  yaml.h
src/demangle/: demangle.cpp  demangle.h
src/example/: main.cpp
src/exampleFon/: CMakeLists.txt  main.cpp
src/fon/: CMakeLists.txt  Visitor.h  binary.h  json.h  proxy.h  traits.h  utils.h  yaml.h
src/fon/std/: all.h  array.h  chrono.h  deque.h  filesystem.h  forward_list.h  list.h  map.h  memory.h  optional.h  set.h  tuple.h  unordered_map.h  unordered_set.h  utility.h  variant.h  vector.h
src/reflect/: reflect.h
src/testBinaryFon/: CMakeLists.txt  main.cpp  testBool.cpp  testClasses.cpp  testContainer.cpp  testEnum.cpp  testFloats.cpp  testInts.cpp  testPointers.cpp  testStructs.cpp
src/testJSONFon/: CMakeLists.txt  testBool.cpp  testClasses.cpp  testContainer.cpp  testEnum.cpp  testFloats.cpp  testInts.cpp  testJSON.cpp  testPointers.cpp  testStructs.cpp
src/testYAMLFon/: CMakeLists.txt  main.cpp  testBool.cpp  testClasses.cpp  testContainer.cpp  testEnum.cpp  testFloats.cpp  testInts.cpp  testPointers.cpp  testYAML.cpp
